--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_setting"
-        android:title="Settings"
+        android:id="@+id/vista"
+        android:title="Vista satelite"
         android:orderInCategory="100"
         app:showAsAction="never">
 
