--- a/app/src/main/res/anim/left_out.xml
+++ b/app/src/main/res/anim/left_out.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<translate
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:duration="500"
-    android:fromXDelta="0"
-    android:toXDelta="-100%p"
-    android:interpolator="@android:anim/linear_interpolator" />
+<set xmlns:android="http://schemas.android.com/apk/res/android" >
+    <translate
+        android:duration="600"
+        android:fromXDelta="0%"
+        android:toXDelta="-100%" >
+    </translate>
+</set>
