--- a/app/src/main/res/layout/activity_filtro.xml
+++ b/app/src/main/res/layout/activity_filtro.xml
@@ -18,6 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
+        android:gravity="center_horizontal"
         android:id="@+id/textView2"
         android:textStyle="normal|bold"
         android:textColor="@android:color/background_light"
