--- a/app/src/main/res/layout/layout_lugar.xml
+++ b/app/src/main/res/layout/layout_lugar.xml
@@ -7,7 +7,7 @@
     android:layout_marginRight="5dp"
     android:id="@+id/card"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    card_view:cardCornerRadius="10dp"
+    card_view:cardCornerRadius="6dp"
     card_view:cardElevation="4dp"
     card_view:cardBackgroundColor="@color/colorAccent"
     card_view:cardUseCompatPadding="true"
@@ -17,26 +17,18 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="7dp"
         android:layout_marginBottom="8dp">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            card_view:srcCompat="@color/cast_expanded_controller_seek_bar_progress_background_tint_color"
-            android:id="@+id/iv_lugar" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="6dp"
             android:orientation="horizontal">
             <TextView
-                android:text="Lugar: "
-                android:textColor="@color/naranja"
-                android:id="@+id/tvlugar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-            <TextView
+                android:textSize="18sp"
                 android:textColor="@color/colorPrimary"
+                android:textStyle="bold"
                 android:id="@+id/tv_lugar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
@@ -45,15 +37,19 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="6dp"
             android:orientation="horizontal">
             <TextView
                 android:text="Direccion: "
+                android:textStyle="bold"
+                android:textSize="14sp"
                 android:textColor="@color/naranja"
                 android:id="@+id/tvdireccion"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
                 android:textColor="@color/colorPrimary"
+                android:textSize="14sp"
                 android:id="@+id/tv_direccion"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
@@ -62,15 +58,19 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="6dp"
         android:orientation="horizontal">
         <TextView
             android:text="Telefono: "
+            android:textStyle="bold"
+            android:textSize="14sp"
             android:textColor="@color/naranja"
             android:id="@+id/tvtelefono"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
             android:textColor="@color/colorPrimary"
+            android:textSize="14sp"
             android:id="@+id/tv_telefono"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
@@ -78,15 +78,19 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="6dp"
         android:orientation="horizontal">
         <TextView
             android:text="Web: "
+            android:textStyle="bold"
             android:textColor="@color/naranja"
+            android:textSize="14sp"
             android:id="@+id/tvweb"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
             android:textColor="@color/colorPrimary"
+            android:textSize="14sp"
             android:id="@+id/tv_web"
             android:textStyle="italic"
             android:layout_width="wrap_content"
