--- a/app/src/main/res/layout/layout_falla.xml
+++ b/app/src/main/res/layout/layout_falla.xml
@@ -1,130 +1,143 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:tools="http://schemas.android.com/tools"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card1"
     android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    card_view:cardBackgroundColor="@color/colorAccent"
     card_view:cardCornerRadius="6dp"
     card_view:cardElevation="4dp"
-    card_view:cardUseCompatPadding="true"
     card_view:cardPreventCornerOverlap="false"
-    card_view:cardBackgroundColor="@color/colorAccent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="150dp">
+    card_view:cardUseCompatPadding="true">
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:clickable="false"
-        android:descendantFocusability="blocksDescendants"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
-        android:id="@+id/linear">
+        android:orientation="horizontal">
+
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_marginRight="5dp"
+            android:layout_weight="0.70">
+
+            <ImageView
+                android:id="@+id/img"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:foregroundGravity="center_vertical" />
+
+        </LinearLayout>
+
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <FrameLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="5dp">
-
-                <ImageView
-                    android:id="@+id/img"
-                    android:layout_width="100dp"
-                    android:layout_height="match_parent"
-                    android:foregroundGravity="center_vertical" />
-
-            </FrameLayout>
-
-
-
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="137dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true">
+            android:layout_weight="0.30"
+            android:orientation="vertical">
 
 
             <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="5dp"
-                android:layout_marginTop="10dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/nombre"
-                android:textStyle="bold"
-                android:textColor="@color/colorPrimary"
-                android:textSize="18sp"
-                android:layout_marginBottom="5dp" />
-
-                </LinearLayout>
-
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="5dp"
-                android:layout_marginTop="10dp">
-
-
-            <TextView
-                android:text="@string/seccion"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:id="@+id/seccion_titulo"
-                android:textSize="14sp"
-                android:textColor="@android:color/holo_orange_light"
-                android:layout_marginRight="10dp" />
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="seccion"
-                android:id="@+id/seccion"
-                android:textColor="?android:attr/colorBackground"
-                android:textSize="14sp"
-                android:layout_marginBottom="5dp"
-               />
-</LinearLayout>
-                <LinearLayout
-                    android:orientation="horizontal"
+                <TextView
+                    android:id="@+id/nombre"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
-                    android:layout_marginTop="10dp">
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
-            <TextView
-                android:text="@string/lema"
+            </LinearLayout>
+
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:id="@+id/lema_titulo"
-                android:textSize="14sp"
-                android:textColor="@android:color/holo_orange_light"
-                android:layout_marginRight="10dp" />
+                android:layout_marginBottom="10dp"
+                android:orientation="horizontal">
 
-            <TextView
-                android:layout_width="wrap_content"
+
+                <TextView
+                    android:id="@+id/seccion_titulo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="10dp"
+                    android:text="@string/seccion"
+                    android:textColor="@android:color/holo_orange_light"
+                    android:textSize="14sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/seccion"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:text="seccion"
+                    android:textColor="?android:attr/colorBackground"
+                    android:textSize="14sp" />
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="lema"
-                android:id="@+id/lema"
-                android:textSize="14sp"
-                android:textColor="?attr/colorBackgroundFloating"
-                android:gravity="right" />
+                android:layout_marginBottom="10dp"
+                android:orientation="horizontal">
 
-                    </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_weight="0.25">
+
+                    <TextView
+                        android:id="@+id/lema_titulo"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="10dp"
+                        android:text="@string/lema"
+                        android:textColor="@android:color/holo_orange_light"
+                        android:textSize="14sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/lema"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="right"
+                        android:text="lema"
+                        android:textColor="?attr/colorBackgroundFloating"
+                        android:textSize="14sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_weight="0.75">
+
+                    <ImageView
+                        android:id="@+id/ubicacio"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="right"
+                        android:background="@drawable/ubicacion" />
+                </LinearLayout>
+            </LinearLayout>
+
+
 
         </LinearLayout>
-</LinearLayout>
     </LinearLayout>
 </android.support.v7.widget.CardView>
