--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -34,7 +34,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:id="@+id/btn_lista"
-                android:text="Lista"
+                android:text="@string/lista"
                 android:background="@android:color/holo_orange_light"
                 android:textColor="@android:color/background_light" />
 
