--- a/app/src/main/res/layout/list_item_right.xml
+++ b/app/src/main/res/layout/list_item_right.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
 
     <android.support.v7.widget.CardView
@@ -13,6 +14,7 @@
         android:layout_height="wrap_content"
         card_view:cardCornerRadius="4dp"
         card_view:cardElevation="1dp"
+        android:layout_gravity="right"
         android:layout_marginBottom="3dp"
         android:layout_marginRight="15dp"
         android:layout_marginStart="15dp"
@@ -21,7 +23,7 @@
         <LinearLayout
             android:orientation="vertical"
             android:layout_height="match_parent"
-            android:background="@drawable/grey_bubble"
+            android:background="@drawable/green_bubble"
             android:layout_width="181dp">
 
 
@@ -77,4 +79,4 @@
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
-</RelativeLayout>
+</LinearLayout>
