--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -16,24 +16,27 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerV"
         android:layout_width="match_parent"
+        android:layout_weight="0.10"
         android:padding="3dp"
         android:scrollbars="vertical"
-        android:layout_height="439dp"
+        android:layout_height="match_parent"
+        android:background="@color/colorPrimary"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_weight="0.90">
 
         <EditText
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:hint="@string/mensaje"
             android:id="@+id/input"
-            android:maxLines="1"
-            android:layout_weight="9.53" />
+            android:layout_weight="0.15"
+            android:maxLines="1" />
 
         <ImageView
             android:id="@+id/btn_enviar"
@@ -41,9 +44,9 @@
             android:src="@android:drawable/ic_menu_send"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.85"
             android:background="@drawable/ic_send" />
 
     </LinearLayout>
