--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
     android:background="@drawable/fondo1">
 
     <Button
-        android:text="Entrar"
+        android:text="@string/entrar2"
         android:layout_width="180dp"
         android:layout_height="40dp"
         android:id="@+id/Entrar"
@@ -23,5 +23,13 @@
         android:layout_marginBottom="135dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
+
+    <ImageView
+        app:srcCompat="@drawable/idioma_es"
+        android:id="@+id/idioma"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
