--- a/app/src/main/res/layout/layout_lugar.xml
+++ b/app/src/main/res/layout/layout_lugar.xml
@@ -44,7 +44,7 @@
                 android:id="@+id/tvdireccion"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Direccion: "
+                android:text="@string/direccion"
                 android:textColor="@color/naranja"
                 android:textSize="14sp"
                 android:textStyle="bold" />
@@ -67,7 +67,7 @@
                 android:id="@+id/tvtelefono"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Telefono: "
+                android:text="@string/telefono"
                 android:textColor="@color/naranja"
                 android:textSize="14sp"
                 android:textStyle="bold" />
@@ -90,7 +90,7 @@
                 android:id="@+id/tvweb"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Web: "
+                android:text="@string/web"
                 android:textColor="@color/naranja"
                 android:textSize="14sp"
                 android:textStyle="bold" />
