--- a/app/src/main/res/layout/layout_monumento.xml
+++ b/app/src/main/res/layout/layout_monumento.xml
@@ -51,7 +51,7 @@
                     android:id="@+id/nombre"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="nombre"
+                    android:text="@string/nombre"
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:textColor="@color/colorPrimary"
                     android:textSize="18sp"
