--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <android.support.v7.widget.CardView
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -23,7 +24,7 @@
             android:orientation="vertical"
             android:layout_width="181dp"
             android:layout_height="match_parent"
-            android:background="@drawable/green_bubble">
+            android:background="@drawable/grey_bubble">
 
 
             <LinearLayout
@@ -78,4 +79,4 @@
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
-</RelativeLayout>
+</LinearLayout>
